# MiRoot

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  debug.keystore  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bootstrap.sh  master.sh
app/src/main/jni/: CMakeLists.txt  daemon_runner.c
app/src/main/kotlin/me/sukimon/miroot/: MainActivity.kt
app/src/main/kotlin/me/sukimon/miroot/ui/screen/: HomeScreen.kt
app/src/main/kotlin/me/sukimon/miroot/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/me/sukimon/miroot/util/: AssetExtractor.kt  MqsasExploit.kt  SystemChecks.kt
app/src/main/kotlin/me/sukimon/miroot/viewmodel/: MainViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
data/: adb执行.sh  live_setup.sh  module_JailNOTBreak_action.sh  prompt.txt  restartadbd.sh
gradle/: libs.versions.toml
